# stt

./: .gitignore  README.md  pyproject.toml  requirements.txt
openai_stt/: __init__.py  stt.py
stt/: stt.py
stt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
