[project]
name = "stt"
version = "0.1.0"
description = "Speech-to-Text tool using Whisper, PyAudio, and VAD."
authors = [
    { name="Your Name", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "whisper",
    "pyaudio",
    "webrtcvad",
    "keyboard"
]

[tool.setuptools]
packages = ["stt"]
