[project]
name = "stt"
version = "0.1.2"
description = "Speech-to-Text tool using Whisper, PyAudio, and VAD."
authors = [
    { name="Advik Mathur", email="pranit.advik@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "whisper",
    "pyaudio",
    "webrtcvad",
    "keyboard"
]

[tool.setuptools]
packages = ["stt"]
